[WIP] Started recommandation algorithm and cleaned db migrations
